--- a/public/assets/css/nuevocv.css
+++ b/public/assets/css/nuevocv.css
@@ -1,22 +1,22 @@
 /*Parallax*/
 section.module.parallax-1 {
-    background-image: url("../img/formulario/cabeceras/datos.jpg");
+    background-image: url("../img/formulario/datos.jpg");
 }
 
 section.module.parallax-2 {
-    background-image: url("../img/formulario/cabeceras/experiencia.jpg");
+    background-image: url("../img/formulario/experiencia.jpg");
 }
 
 section.module.parallax-3 {
-    background-image: url("../img/formulario/cabeceras/formacion.jpg");
+    background-image: url("../img/formulario/formacion.jpg");
 }
 
 section.module.parallax-4 {
-    background-image: url("../img/formulario/cabeceras/idiomas.jpg");
+    background-image: url("../img/formulario/idiomas.jpg");
 }
 
 section.module.parallax-5 {
-    background-image: url("../img/formulario/cabeceras/capacidades.jpg");
+    background-image: url("../img/formulario/capacidades.jpg");
 }
 
 
