--- a/public/assets/css/nuevocv.css
+++ b/public/assets/css/nuevocv.css
@@ -90,3 +90,23 @@ section.module.parallax-5 {
     font-size: 12px;
     white-space: nowrap;
 }
+
+
+form textarea{
+    text-align: justify;
+}
+
+/*Separador entre formularios con foreach*/
+hr{
+    background-color: #1b1464;
+    width: 30%;
+}
+
+/*enlace para eliminar elemento*/
+.eliminarform{
+    color:darkred;
+    float: right;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px 6px;
+}
