--- a/public/assets/css/clasico.css
+++ b/public/assets/css/clasico.css
@@ -11,7 +11,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 display:block;
 }
 
-html, body {background: #181818; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222; text-align: justify;}
+html, body {background: #181818; font-family: "Times New Roman", helvetica, arial, sans-serif; font-size: 16px; color: #222; text-align: justify;}
 
 .clear {clear: both;}
 
@@ -25,27 +25,27 @@ p {
 #cv {
 	width: 90%;
 	max-width: 800px;
-	background: #f3f3f3;
+	background: #ffffff;
 	margin: 30px auto;
 }
 
 .mainDetails {
 	padding: 25px 35px;
-	border-bottom: 2px solid #cf8a05;
-	background: #ededed;
+	border-bottom: 2px solid gray;
+	background: #ffffff;
 }
 
 #name h1 {
 	font-size: 2.5em;
 	font-weight: 700;
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	margin-bottom: -6px;
 }
 
 #name h2 {
 	font-size: 2em;
 	margin-left: 2px;
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: "Times New Roman", Times, serif;
 }
 
 #mainArea {
@@ -123,14 +123,14 @@ section:last-child {
 }
 
 .sectionTitle h1 {
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	font-style: italic;
 	font-size: 1.5em;
-	color: #cf8a05;
+	color: gray;
 }
 
 .sectionContent h2 {
-	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+	font-family: "Times New Roman", Times, serif;
 	font-size: 1.5em;
 	margin-bottom: -2px;
 }
